syntax = "proto3";

package gitpod.v1;

import "google/protobuf/descriptor.proto";

option go_package = "github.com/gitpod-io/gitpod/components/public-api/go/v1";

message ServiceMethodOptions {
  enum ErrorCode {
    // ERROR_CODE_UNSPECIFIED is OK
    ERROR_CODE_UNSPECIFIED = 0;
    ERROR_CODE_CANCELLED = 1;
    ERROR_CODE_UNKNOWN = 2;
    ERROR_CODE_INVALID_ARGUMENT = 3;
    ERROR_CODE_DEADLINE_EXCEEDED = 4;
    ERROR_CODE_NOT_FOUND = 5;
    ERROR_CODE_ALREADY_EXISTS = 6;
    ERROR_CODE_PERMISSION_DENIED = 7;
    ERROR_CODE_RESOURCE_EXHAUSTED = 8;
    ERROR_CODE_FAILED_PRECONDITION = 9;
    ERROR_CODE_ABORTED = 10;
    ERROR_CODE_OUT_OF_RANGE = 11;
    ERROR_CODE_UNIMPLEMENTED = 12;
    ERROR_CODE_INTERNAL = 13;
    ERROR_CODE_UNAVAILABLE = 14;
    ERROR_CODE_DATA_LOSS = 15;
    ERROR_CODE_UNAUTHENTICATED = 16;
  }

  // whether method allows unauthenticated access
  bool unauthenticated = 1;
  // expected error codes which can be returned by this method
  repeated ErrorCode error_codes = 2;
}

extend google.protobuf.MethodOptions {
  ServiceMethodOptions service_method_options = 50001;
}
